galactae/galactae-cdn-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: galactae-cdn
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: galactae-cdn
  template:
    metadata:
      labels:
        app: galactae-cdn
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/galactae-cdn:0.10.8-rev.260608b
        name: galactae-cdn
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 5m
            memory: 15Mi
          limits:
            cpu: 300m
            memory: 500Mi
      imagePullSecrets:
      - name: github
