galactae/galactae-client-00-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: galactae-client-00
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: galactae-client-00
  template:
    metadata:
      labels:
        app: galactae-client-00
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/galactae-client:Beta-0.10.7-rev.260503a
        name: galactae-client-00
        ports:
        - containerPort: 80
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "bash /var/www/applyEnvVariables.sh"]
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 5m
            memory: 75Mi
          limits:
            cpu: 300m
            memory: 1000Mi
        volumeMounts:
        - name: galactae-client-00-config
          mountPath: "/var/www/config/"
          readOnly: true

        - name: galactae-client-00-config
          mountPath: "/var/www/app/views/gvars/"
          readOnly: true

      imagePullSecrets:
      - name: github
      volumes:
      - name: galactae-client-00-config
        configMap:
          name: galactae-client-00-config
