galactae/galactae-server-01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: galactae-server-01
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: galactae-server-01
  template:
    metadata:
      labels:
        app: galactae-server-01
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/galactae-server:0.10.7
        name: galactae-server-01
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 5m
            memory: 75Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        volumeMounts:
        - name: galactae-server-01-config
          mountPath: "/app/config/"
          readOnly: true

      imagePullSecrets:
      - name: github
      volumes:
      - name: galactae-server-01-config
        configMap:
          name: galactae-server-01-config
