galactae/galactae-website-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: galactae-website
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: galactae-website
  template:
    metadata:
      labels:
        app: galactae-website
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/galactae-website:main
        name: galactae-website
        ports:
        - containerPort: 80
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "bash /var/www/applyEnvVariables.sh"]
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 5m
            memory: 75Mi
          limits:
            cpu: 300m
            memory: 1000Mi
        volumeMounts:
        - name: galactae-website-config
          mountPath: "/var/www/config/"
          readOnly: true
      imagePullSecrets:
      - name: github
      volumes:
      - name: galactae-website-config
        configMap:
          name: galactae-website-config
