galactae/galactae-cdn-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: galactae-cdn-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: galactae-cdn
