galactae/galactae-client-01-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: galactae-client-01-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: galactae-client-01
