galactae/galactae-server-00-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: galactae-server-00-svc
spec:
  ports:
  - port: 80
    targetPort: 42690
  selector:
    app: galactae-server-00
