galactae/galactae-server-01-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: galactae-server-01-svc
spec:
  ports:
  - port: 80
    targetPort: 42691
  selector:
    app: galactae-server-01
