galactae/galactae-website-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: galactae-website-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: galactae-website
