galactae/galactae-cdn-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: galactae-cdn-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`cdn.galactae.eu`)
    kind: Rule
    services:
    - name: galactae-cdn-svc
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: galactae-subdomains-tls
