galactae/galactae-server-00-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: galactae-server-00-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`00-srv.galactae.eu`)
    kind: Rule
    services:
    - name: galactae-server-00-svc
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: galactae-subdomains-tls-secret
