galactae/galactae-server-01-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: galactae-server-01-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`01-srv.galactae.eu`)
    kind: Rule
    services:
    - name: galactae-server-01-svc
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: galactae-subdomains-tls
