galactae/galactae-website-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: galactae-website-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`galactae.eu`)
    kind: Rule
    services:
    - name: galactae-website-svc
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: galactae-website-tls-secret
